<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.chuck.android.popularmovies.MainActivity">
    <item
        android:id="@+id/action_sortby"
        android:orderInCategory="100"
        android:title="@string/action_sortBy"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_popular"
        android:orderInCategory="100"
        android:title="@string/action_popular"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_topRated"
        android:orderInCategory="100"
        android:title="@string/action_topRated"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        app:showAsAction="always"/>
</menu>
