<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/movieDetailsPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dp">
                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_normal"
                    android:textSize="@dimen/title_text"/>
                <TextView
                    android:id="@+id/movieDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_normal"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/movieRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/star"
                    android:textColor="@color/text_normal"
                    android:textSize="18sp"/>
                <CheckBox
                    android:id="@+id/ck_favorites"
                    android:text="@string/ck_favorites_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/movieDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/text_normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trailer_label"
            android:text="@string/movie_trailers"
            android:textSize="@dimen/title_text"
            android:textColor="@color/text_normal"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailerList"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="top">
        </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/review_label"
            android:text="@string/review_label"
            android:textSize="@dimen/title_text"
            android:textColor="@color/text_normal"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviewList"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="top">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</ScrollView>
